--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,35 +15,35 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".CalendarViewActivity"
+            android:name=".calendar.CalendarViewActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ContactListTeacherActivity"
+            android:name=".readUser.ContactListTeacherActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ContactListStudentActivity"
+            android:name=".readUser.ContactListStudentActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".AddTeacherActivity"
+            android:name=".writeUser.AddTeacherActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".AddStudentActivity"
+            android:name=".writeUser.AddStudentActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
