--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".calendar.EditDayActivities"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".readUser.ContactListTeacherActivity"
             android:exported="false">
             <meta-data
