--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-
+        <activity
+            android:name=".AddUser.AddClientActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".AddClient"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".AddUser.AddAdminActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".calendar.CalendarViewActivity"
             android:exported="false">
@@ -30,7 +50,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".readUser.client.ClientContactListTeacherActivity"
             android:exported="false">
@@ -47,7 +66,8 @@
         </activity>
         <activity
             android:name=".menu.AdminMenuActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/myActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -95,14 +115,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".writeUser.AddTeacherActivity"
+            android:name=".AddUser.AddTeacherActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".writeUser.AddStudentActivity"
+            android:name=".AddUser.AddStudentActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
