--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,12 @@ android {
 dependencies {
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-//    implementation 'com.google.firebase:firebase-auth:21.0.2'
+    // Firebase dependencies
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
     testImplementation 'junit:junit:4.13.2'
@@ -59,7 +61,6 @@ dependencies {
 
 
 
-//    implementation 'com.google.firebase:firebase-admin:9.1.1'
 
 
 }
