--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,6 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".personal_case.feedback_case"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".feedback.FeedbackActivity"
             android:exported="false">
             <meta-data
@@ -98,14 +91,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".notes.editnoteactivity"
+            android:name=".notes.EditNoteActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".notes.notesactivity"
+            android:name=".notes.NotesActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
