--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,7 +147,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".calendar.AddActivities"
+            android:name=".calendar.EditDayActivities"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
