--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
     implementation 'org.apache.poi:poi-ooxml:4.1.2'
 
+    implementation 'androidx.core:core:1.9.0'
+
 
 
 
